# jos

./: .gitignore  CMakeLists.txt  README.md  README.txt  compile-cross.sh  gdbinit  install-deps.sh  makefile  masks.txt  notes.txt  shrc.sh
notes/: asdf.txt  copypasta.txt  fat.txt
src/: cxx_util.cc
src/kernel/: arp.cc  arp.h  ata_block_device.cc  ata_block_device.h  block_device.cc  block_device.h  boot.asm  buffer_file.cc  buffer_file.h  buffer_pipe.cc  buffer_pipe.h  clone_handler.cc  clone_handler.h  dcheck_failed.cc  debug_handler.cc  debug_handler.h  disk_file.cc  disk_file.h  e1000.cc  e1000.h  elf.cc  elf.h  ethernet.cc  ethernet.h  exec_handler.cc  exec_handler.h  fcntl_handler.cc  fcntl_handler.h  files.cc  files.h  fork_handler.cc  fork_handler.h  frame.cc  frame.h  getc_handler.cc  getc_handler.h  getcwd_handler.cc  getcwd_handler.h  getpid_handler.cc  getpid_handler.h  (+75 more)
src/shared/: array.h  asm.c  asm.h  clone.cc  clone.h  collection.h  dcheck.h  dirent.cc  dirent.h  exec.cc  exec.h  exit.cc  exit.h  fcntl.cc  fcntl.h  fork.cc  fork.h  getc.cc  getc.h  getpid.cc  getpid.h  io.cc  io.h  ipc.cc  ipc.h  iterable.h  iterator.h  jarray.h  jarray_base.h  jbuffer.h  jmap.h  jos.h  jpair.h  jqueue.h  jstring.cc  jstring.h  linked_list.h  linked_set.h  list.h  packets.cc  (+28 more)
src/test/: array_test.cc  atoi_test.cc  filepath_test.cc  jarray_test.cc  jarray_test_2.cc  jbuffer_test.cc  jmap_test.cc  jqueue_test.cc  jstring_test.cc  linked_list_test.cc  linked_list_test.ccc  packets_test.cc  proc_test.cc  smartalloc.c  smartalloc.h  test.h  (+1 more)
user-tests/: read.cc
(+46 files in other folders)
